# snail

./: .clang-format  .environment.yml  .gitignore  .gitmodules  AGENTS.md  CITATION.cff  CMakeLists.txt  LICENSE  README.md  environment.yml  examples.sh  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  release-snail.md
.github/workflows/: build.yml  docs.yml  package.yml  python.yml
docs/source/: conf.py  getting_started.md  getting_started.rst  index.rst  setup.ipynb  tutorials.rst
docs/source/_static/: theme_tweaks.css
docs/source/api/: modules.rst  snail.core.rst  snail.rst
docs/source/tutorials/: 01-data-preparation-ghana.ipynb  02-assess-damage-and-disruption.ipynb  03-test-multiple-failures.ipynb  04-evaluate-adaptation-options.ipynb  05-aggregate-split-attributes.ipynb
extension/: CMakeLists.txt
extension-rust/: Cargo.toml
extension-rust/src/: geometry.rs  main.rs
extension/src/: geometry.hpp  grid.hpp  intersections.cpp  operations.cpp  operations.hpp  utils.hpp
extension/tests/: README.md  tests_intersections.cpp
scripts/failure_analysis/: fragility_damage_analysis.py  results_process_vietnam.py
scripts/hazard_processing/: convert_hazard_data.py
scripts/network_creation/: spatial_and_network_functions.py
scripts/network_hazard_intersections/: hazards_network_intersections_results_collect.py  hazards_networks_intersections.py  intersection_networks.py  intersection_points.py  intersection_polygons.py  network_intersections.py
scripts/polygon2raster/: polygon2raster.py
scripts/sources_sinks_routing/: benchmark_shortest_path.py  shortest_paths_igraph.py  shortest_paths_pandana.py
src/: CMakeLists.txt
src/cpp/: CMakeLists.txt  README.md  exceptions.hpp  features.h  find_intersections_linestring.cpp  find_intersections_linestring.hpp  geofeatures.hpp  geom.h  geom.hpp  geometry.hpp  grid.hpp  intersections.cpp  notes.org  operations.cpp  operations.hpp  raster.h  raster.hpp  test_raster.cpp  tests.cpp  todo.org  transform.hpp  utils.h  utils.hpp
src/cpp/tests/: CMakeLists.txt  README.md  tests.cpp
src/cpp/tests/test_data/: fake_raster.asc
src/snail/: __init__.py  __main__.py  cli.py  damages.py  grid.py  intersection.py  io.py  multi_intersections.py  raster2split.py  routing.py  snail_intersections.py  tqdm_standin.py
src/snail/core/: __init__.py
tests/: split_polygons_rings.py  test_cli.py  test_damages.py  test_grid.py  test_init.py  test_intersection.py  test_intersections.py  test_io.py  test_multi_intersections.py  test_routing.py  test_snail_intersections.py
tests/core/: test_core.py  test_intersections.py
tests/cpp/: README.md  run_tests.cpp  tests.cpp  tests_intersections.cpp  tests_transform.cpp
tests/integration/: climatology-hd35-annual-mean.tif  climatology-hd35-historical.nc  climatology-hd35-historical.tif  features.csv  features_alt_path.csv  features_error.csv  inunriver_historical_WATCH_1980_rp01000.tif  inunriver_historical_WATCH_1980_rp01000.tif.aux.xml  lines.geojson  paved-road-flood-depth-damage.csv  paved-road-flood-depth-damage.xlsx  piecewise-linear-damage-curve.csv  piecewise-linear-damage-curve.xlsx  points.geojson  polygons.geojson  range.tif  range.tif.aux.xml  rasters.csv  run_examples.sh
tutorials/: 01-data-preparation-ghana.ipynb  02-assess-damage-and-disruption.ipynb  03-test-multiple-failures.ipynb  04-evaluate-adaptation-options.ipynb  05-aggregate-split-attributes.ipynb
